@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -87,8 +87,8 @@ public class IndirectListTest {
             testList = IndirectCollectionsFactory.createIndirectList();
         } else {
             try {
-                testList = cls.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                testList = cls.getConstructor().newInstance();
+            } catch (ReflectiveOperationException e) {
                 throw new RuntimeException(e);
             }
         }
